2007-01-29  dima  <dima.exe@gmail.com>

	* rails.el (rails-db-parameters): patch #8232 (by Ronaldo Ferraz)
	Console is not starting because env is not quoted in the function
	call, resulting in a Ruby error

	* rails-ws.el, rails-wi.el: patch #8233 (by Ronaldo Ferraz) Fixes
	a couple of UI messages and allows web server selection auto-save

2007-01-28  dima  <dima.exe@gmail.com>

	* *.el: fix bytecompile warnings
	
	* rails-core.el: remove dublicate of fucntion rails-core:helper-file

	* rails-navigation.el: patch #8228

	* rails.el (ruby-mode-hook): remove variables tab-width and indent-tabs

	* rails-ws.el: make variable  rails-ws:default-server-type are customized (to fix #8223)

	* rails-lib.el: add cross declaration indent-or-complete (to fix #8221)

2007-01-27  dima  <dima.exe@gmail.com>

	* rails-for-controller.el (rails-controller:switch-with-menu):
	call rails-controller:switch-to-view for "Current view" 

	* rails-log.el (rails-log:open-file): run rails-minor-mode in log buffer

	* rails-ui.el: update "Open log" menu

	* rails.el: relete function rails-open-log, and place all log
	related fuction to rails-log.el

	* rails-log.el: create

	* rails-lib.el (apply-colorize-to-buffer): create

	* rails-ws.el: update rails-ws:*browser* functions

	* rails.el (rails-directory<-->types): add plugin directory

	* rails-for-view.el (rails-view:switch-with-menu): update menu title

	* rails-for-plugin.el: create

	* rails-for-helper.el (rails-helper:switch-with-menu): update menu title

	* rails-for-functional-test.el (rails-for-functional-test:switch-with-menu): update-menu-title

	* rails-for-controller.el (rails-controller:switch-with-menu): update menu title

	* rails-core.el (rails-core:menu): fix menu position 
	add new functions rails-core:plugin-files, rails-core:plugin-file,
	rails-core:current-plugin

2007-01-26  dima  <dima.exe@gmail.com>

	* rails-ui.el (rails-minor-mode-menu-bar-map): rename menu item WEBrick to Web Server.
	Update menu group Web Server